# dhall-lang

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  cheatsheet.md  release.nix
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: release_template.md
Prelude/: Map.dhall  Monoid  Monoid.dhall  Operator.dhall  README.md  package.dhall
Prelude/Bool/: and  and.dhall  build  build.dhall  equal  equal.dhall  even  even.dhall  fold  fold.dhall  not  not.dhall  odd  odd.dhall  or  or.dhall  package.dhall  show  show.dhall
Prelude/CBOR/: Type.dhall  array.dhall  arrayOf.dhall  base64.dhall  base64url.dhall  bool.dhall  data.dhall  diagnostic.dhall  double.dhall  fromJSON.dhall  integer.dhall  map.dhall  null.dhall  package.dhall  tag.dhall  text.dhall  textMap.dhall  toArray.dhall
Prelude/Date/: day.dhall  month.dhall  package.dhall  show.dhall  year.dhall
Prelude/DirectoryTree/: Directory.dhall  Entry.dhall  File.dhall  Group.dhall  Make.dhall  Metadata.dhall  Mode.dhall  Tree.dhall  User.dhall  access.dhall  entry.dhall  equalAccess.dhall  equalMode.dhall  file.dhall  groupId.dhall  groupName.dhall  makeTree.dhall  makeTreeFromList.dhall  makeTreesFromList.dhall  mode.dhall  package.dhall  path.dhall  userId.dhall  userName.dhall
Prelude/Double/: package.dhall  show  show.dhall
Prelude/Function/: Validate  Validate.dhall  compose  compose.dhall  composeList  composeList.dhall  identity  identity.dhall  nonexpanding  nonexpanding.dhall  nonexpandingPredicate  nonexpandingPredicate.dhall  package.dhall  sequence
Prelude/Integer/: abs  abs.dhall  add  add.dhall  clamp  clamp.dhall  equal  equal.dhall  greaterThan  greaterThan.dhall  greaterThanEqual  greaterThanEqual.dhall  ifPositive  lessThan  lessThan.dhall  lessThanEqual  lessThanEqual.dhall  multiply  multiply.dhall  negate  negate.dhall  negative  negative.dhall  nonNegative  nonNegative.dhall  nonPositive  nonPositive.dhall  package.dhall  positive  positive.dhall  show  show.dhall  subtract  subtract.dhall  toDouble  toDouble.dhall  toNatural  toNatural.dhall
Prelude/JSON/: Format  Format.dhall  JSON  Nesting  Nesting.dhall  Tagged  Tagged.dhall  Type  Type.dhall  array  array.dhall  bool  bool.dhall  core.dhall  core.dhall.dhall  double  double.dhall  field  field.dhall  filterNullFields  integer  integer.dhall  keyText  keyText.dhall  keyValue  keyValue.dhall  natural  natural.dhall  null  null.dhall  number  number.dhall  object  object.dhall  omitNullFields  omitNullFields.dhall  package.dhall  render  render.dhall  renderAs  (+12 more)
Prelude/List/: WithIndex  WithIndex.dhall  all  all.dhall  any  any.dhall  build  build.dhall  concat  concat.dhall  concatMap  concatMap.dhall  default  default.dhall  drop  drop.dhall  empty  empty.dhall  filter  filter.dhall  filterMap  filterMap.dhall  fold  fold.dhall  foldLeft.dhall  generate  generate.dhall  head  head.dhall  index  index.dhall  indexed  indexed.dhall  iterate  iterate.dhall  last  last.dhall  length  length.dhall  map  (+24 more)
Prelude/Location/: Type  Type.dhall  package.dhall
Prelude/Map/: Entry  Entry.dhall  Type  Type.dhall  empty  empty.dhall  keyText  keyText.dhall  keyValue  keyValue.dhall  keys  keys.dhall  map  map.dhall  mapMaybe.dhall  package.dhall  unpackOptionals  unpackOptionals.dhall  values  values.dhall
Prelude/Natural/: add.dhall  build  build.dhall  digitCount  digitCount.dhall  digitsInBase  digitsInBase.dhall  divMod  divMod.dhall  enumerate  enumerate.dhall  eq  equal  equal.dhall  even  even.dhall  fold  fold.dhall  greaterThan  greaterThan.dhall  greaterThanEqual  greaterThanEqual.dhall  gt  gte  isZero  isZero.dhall  lessThan  lessThan.dhall  lessThanEqual  lessThanEqual.dhall  listMax  listMax.dhall  listMin  listMin.dhall  lt  lte  max  max.dhall  maximum  min  (+23 more)
Prelude/NonEmpty/: Type.dhall  all.dhall  any.dhall  concat.dhall  concatMap.dhall  head.dhall  index.dhall  indexed.dhall  last.dhall  length.dhall  make.dhall  map.dhall  package.dhall  reverse.dhall  shifted.dhall  singleton.dhall  toList.dhall  unzip.dhall  zip.dhall
Prelude/Operator/: !=.dhall  #.dhall  &&.dhall  *.dhall  ++.dhall  +.dhall  ==.dhall  add  and  and.dhall  append  append.dhall  concat  concat.dhall  equal  equal.dhall  listAppend  listAppend.dhall  mul  (+11 more)
docs/: README  conf.py  index.md
nix/: fetchNixpkgs.nix
nixops/: 0001-schema-Builds-use-jobset_id-instead-of-jobset-name-m.patch  README.md  dhall-haskell.json  dhallLangNixpkgs.nix  discourseSmtpPassword  githubLogo.nix  hydra-logical.nix  hydra-physical.nix  hydra.patch  index.css  index.html  index.js  jobsets.nix  logical.nix  nixpkgs.nix  no-restrict-eval.patch  overlay.nix  physical.nix  project.nix  recommonmark.patch  store.nix  twitterBootstrap.nix  twitterLogo.nix  website.nix
scripts/: generate-diagnostic-files.sh  generate-test-files.sh  lint-prelude.sh  test-vm.sh
standard/: AlphaNormalization.lhs  BetaNormalization.lhs  Binary.lhs  Equivalence.lhs  Equivalence.lhs-boot  FunctionCheck.lhs  Interpret.hs  LICENSE  Multiline.lhs  Parser.hs  README.md  Shift.lhs  Substitution.lhs  Syntax.lagda.md  Syntax.lhs  alpha-normalization.md  beta-normalization.md  binary.md  dhall.abnf  equivalence.md  function-check.md  imports.md  multiline.md  record.md  semantics.md  shell.nix  shift.md  standard.cabal  substitution.md  syntax.md  type-inference.md  types.md  types.txt  versioning.md  α-normalization.md  β-normalization.md
standard/dhall/: Main.hs
standard/tasty/: Main.hs
standard/tasty/Test/: AlphaNormalization.hs  Parser.hs  Util.hs
tests/: README.md  diff-binary.sh
(+3300 files in other folders)
